--- a/hlo.html
+++ b/hlo.html
@@ -56,7 +56,7 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3 text-bg-warning">
-                <h4 class="my-0 fw-normal">Temprature</h4>
+                <h4 class="my-0 fw-normal">Temperature</h4>
               </div>
               
               <div class="card-body text-bg-info">
